added temperature to weather.html

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -28,6 +28,7 @@
                 <th>Date</th>
                 <th>Hour</th>
                 <th>Precipitation</th>
+                <th>Temperature</th>
                 <th>Provider</th>
             </tr>
         </thead>
@@ -38,6 +39,7 @@
                 <td>{{ entry.Datum }}</td>
                 <td>{{ entry.Hour }}</td>
                 <td>{{ entry.Precipitation }}</td>
+                <td>{{ entry.Temperature }}</td>
                 <td>{{ entry.Provider }}</td>
             </tr>
             {% endfor %}
