Update temperature in weather.html

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -28,7 +28,7 @@
                 <th>Date</th>
                 <th>Hour</th>
                 <th>Precipitation</th>
-                <th>Temperature</th>
+                <th>Temperature °C</th>
                 <th>Provider</th>
             </tr>
         </thead>
