--- a/templates/weather.html
+++ b/templates/weather.html
@@ -1,4 +1,3 @@
-<!-- templates/weather.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,6 +20,7 @@
 </head>
 <body>
     <h1>Weather Data</h1>
+    <h2 style="text-align: center; font-size: 1.5em; margin-top: 20px;">Weather in Stockholm for the next 24 hours</h2>
     <table>
         <thead>
             <tr>
